--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,19 @@
     <artifactId>ex0</artifactId>
     <version>1.0</version>
 
-    <!-- Set properties for the assignment corrector -->
-    <properties>
-        <user>${user.name}</user>
-        <assignment>ex0</assignment>
-        <server>http://46.101.113.24:8080</server>
-    </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.3</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencies>
         <dependency>
@@ -22,49 +29,5 @@
             <version>4.11</version>
         </dependency>
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>3.0.0</version>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>project</descriptorRef>
-                    </descriptorRefs>
-                    <descriptors>
-                        <descriptor>src/main/resources/assembly.xml</descriptor>
-                    </descriptors>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>single</goal>
-                        </goals>
-                        <phase>package</phase>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>wagon-maven-plugin</artifactId>
-                <version>1.0</version>
-                <executions>
-                    <execution>
-                        <id>correct</id>
-                        <phase>verify</phase>
-                        <goals>
-                            <goal>upload-single</goal>
-                        </goals>
-                    </execution>
-                </executions>
-                <configuration>
-                    <fromFile>target/${artifactId}-${version}-distribution.zip</fromFile>
-                    <toFile>${user}</toFile>
-                    <url>${server}/${assignment}</url>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
